updated swagger api_docs
